[project]
name = "djapy"
version = "0.3.1.dev1"
description = "Fast, zero-boilerplate Django REST API framework with pure Python typing!"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=4.2,<5.2",
    "pydantic>=2.0",
    "asgiref>=3.7.0",
]

[project.optional-dependencies]
performance = [
    "orjson>=3.9.0",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/Bishwas-py/djapy"
Documentation = "https://djapy-docs.pages.dev/"
Repository = "https://github.com/Bishwas-py/djapy"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
asyncio_mode = "auto"
